--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,16 @@
-flask
-flask-cors
-python-dotenv
-langchain
-langchain-community
-langchain-text-splitters
-chromadb
-sentence-transformers
-
-sentence-transformers
-huggingface-hub
-werkzeug
-PyPDF2
-python-docx
-docling
+flask==3.0.0
+flask-cors==4.0.0
+python-dotenv==1.0.0
+langchain==0.1.0
+langchain-community==0.0.20
+langchain-text-splitters==0.0.1
+langchain-ibm==0.1.5
+chromadb==0.4.22
+sentence-transformers==2.2.2
+huggingface-hub==0.20.3
+werkzeug==3.0.1
+pypdf2==3.0.1
+python-docx==1.1.0
+docling==1.4.0
+torch==2.1.0
+torchvision==0.16.0
