--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,32 @@
-flask==3.0.0
+# Core Flask
+flask==2.3.3
 flask-cors==4.0.0
 python-dotenv==1.0.0
-langchain==0.1.0
-langchain-community==0.0.20
-langchain-text-splitters==0.0.1
-langchain-ibm==0.1.5
-chromadb==0.4.22
-sentence-transformers==2.2.2
-huggingface-hub==0.20.3
-werkzeug==3.0.1
+werkzeug==2.3.7
+
+# Document processing
 pypdf2==3.0.1
 python-docx==1.1.0
 docling==1.4.0
-torch==2.1.0
-torchvision==0.16.0
+
+# LangChain (pinned to compatible versions)
+langchain==0.0.354
+langchain-community==0.0.28
+langchain-text-splitters==0.0.1
+langchain-ibm==0.1.2
+
+# Vector database
+chromadb==0.4.22
+
+# Embeddings
+sentence-transformers==2.2.2
+huggingface-hub==0.20.3
+
+# ML/DL
+torch==2.5.0
+torchvision==0.20.0
+numpy==1.24.4
+
+# Utilities
+pydantic==1.10.13
+typing-extensions==4.8.0
