--- a/requirements.txt
+++ b/requirements.txt
@@ -10,10 +10,10 @@ python-docx==1.1.0
 docling==1.4.0
 
 # LangChain (pinned to compatible versions)
-langchain==0.0.354
-langchain-community==0.0.28
-langchain-text-splitters==0.0.1
-langchain-ibm==0.1.2
+langchain
+langchain-community
+langchain-text-splitters
+langchain-ibm
 
 # Vector database
 chromadb==0.4.22
