--- a/requirements.txt
+++ b/requirements.txt
@@ -2,16 +2,17 @@
 flask==2.3.3
 flask-cors==4.0.0
 python-dotenv==1.0.0
+waitress==2.1.2  # Add this for production server
 
 # Minimal document processing
 pypdf2==3.0.1
 python-docx==1.1.0
 
 # LangChain (lightweight versions)
-langchain
-langchain-community
-langchain-text-splitters
-langchain-ibm
+langchain==0.0.354
+langchain-community==0.0.28
+langchain-text-splitters==0.0.1
+langchain-ibm==0.1.2
 
 # Vector database
 chromadb==0.4.22
@@ -23,8 +24,3 @@ sentence-transformers==2.2.2
 numpy==1.24.4
 pydantic==1.10.13
 typing-extensions==4.8.0
-
-# Remove heavy dependencies
-# docling (too heavy for free tier)
-# torch (too heavy for free tier)
-# huggingface-hub (only if needed)
